--- a/my_virtual_thoughts/entries/templates/base.html
+++ b/my_virtual_thoughts/entries/templates/base.html
@@ -2,13 +2,14 @@
 
 <!DOCTYPE html>
 <head>
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        
-            
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
   {% if user.is_authenticated %}
@@ -17,8 +18,8 @@
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">TIET Access</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/create_assignment/">Add new Assignment</a></li>
-          <li>{{user.username}}</li>
+        <li><a href="/create_assignment/">New Assignment</a></li>
+          <li><a href="/user/dashboard">Welcome, {{user.username}}</a></li>
         <li><a href="/user/logout">Logout</a></li>
       </ul>
     </div>
@@ -28,7 +29,7 @@
     <div class="navbar-dark bg-primary">
       <a href="/" class="brand-logo">TIET Access</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li>{{user.username}}</li>
+        <li>Welcome, {{user.username}}</li>
         <li><a href="/user/logout">Logout</a></li>
      <!--    <li><a href="/user/register/">Register</a></li> -->
       </ul>
@@ -40,30 +41,26 @@
     <div class="navbar-dark bg-primary">
       <a href="/" class="brand-logo">TIET Access</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/user/login">Login bitch</a></li>
+        <li><a href="/user/login">Login</a></li>
      <!--    <li><a href="/user/register/">Register</a></li> -->
       </ul>
     </div>
     </nav>
     
     {% endif %}
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 {% block content %} {% endblock %}
-        <footer class="page-footer">
+        <!-- <footer class="page-footer">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <!-- <h5 class="white-text">Designed By:- Kartik Takyar</h5>
-                <p class="grey-text text-lighten-4">Write down here what you got in your mind and get recognized</p> -->
+  
               </div>
               <div class="col l4 offset-l2 s12">
           
-                <!-- <ul>
-                  <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/the._.demogorgon/", target="_blank">Instagram</a></li>
-                  <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/kartik.takyar.7",target="_blank">Facebook</a></li>
-                  <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/kartik-takyar-03b729170/", target="_blank">Linkedin</a></li>
-
-                </ul> -->
+                </ul>
               </div>
             </div>
           </div>
@@ -75,5 +72,5 @@
  
             </div>
           </div>
-        </footer>
+        </footer> -->
 </body>
