--- a/my_virtual_thoughts/entries/templates/index.html
+++ b/my_virtual_thoughts/entries/templates/index.html
@@ -1,28 +1,26 @@
 {% extends "base.html" %}
 {% block content %}
 
-  {% for t in blog_entries %}
+  {% for t in assignment_entries %}
     <div class="row">
     <div class="col s12 m6">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title">{{t.entry_title}}</span>
-          <p>{{t.entry_text|truncatechars:10}}</p>
+          <span class="card-title">{{t.Assignment_Name}}</span>
+          <p>{{t.Assignment_Content}}</p>
         </div>
-        <div class="card-action">
-          <a href="{% url 'entry-detail' t.pk %}">Read More</a>
           <p>
           <break>
           </break>
       </p>
-          <p>Writer: <a href="#">{{t.entry_author}}</a></p>
-         <p> {{t.entry_date}}</p>
+          <p>Published By:- {{t.user}}</p>
+         <p> {{t.Date_Published}}</p>
         </div>
       </div>
     </div>
   </div>
     {% endfor %}
-  {% if is_paginated %}
+  <!-- {% if is_paginated %}
     <ul class="pagination">  
     {% if page_object.has_previous %}
       <li class="page-item">
@@ -39,7 +37,7 @@
       <li class="page-item">
       <a class="page-item" href="?page={{page_obj.next_page_number}}">&rarr; Next Page</a>
     </li>
-  {% endif %}
+  {% endif %} -->
 {% endif %}
 
 
