--- a/my_virtual_thoughts/entries/templates/login.html
+++ b/my_virtual_thoughts/entries/templates/login.html
@@ -1,5 +1,9 @@
   {% extends "base.html" %}
   {% block content %}
+  {% if user.is_authenticated%}
+    You are already Logged in !! Please return to your <a href="http://127.0.0.1:8000/user/dashboard/">dashboard</a>
+    {%endif%}
+{{else}}
   <div class="row">
     <div class="col s12 m6">
       <div class="card blue-grey darken-1">
@@ -19,4 +23,5 @@
       </div>
     </div>
   </div>
-  {% endblock %}
+
+  {% endblock %}}
