a little frontend xD

--- a/my_virtual_thoughts/entries/templates/assign.html
+++ b/my_virtual_thoughts/entries/templates/assign.html
@@ -1,6 +1,8 @@
  {% include "teacher_dashboard.html"%}
   {% block content %}
-  <center><h2>Here are the Assignments</h2></center>
+  <h2 style="font-family: Comic Sans MS, cursive, sans-serif";>Here are the Assignments
+  </h2>
+  
     {% for ass in assignments %}
 
 <div class="jumbotron">
