'using vs code to commit'

--- a/my_virtual_thoughts/entries/templates/base.html
+++ b/my_virtual_thoughts/entries/templates/base.html
@@ -29,7 +29,7 @@
     <div class="navbar-dark bg-primary">
       <a href="/" class="brand-logo">TIET Access</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li>Welcome, {{user.username}}</li>
+        <li><a href="/user/stu_dashboard">  Welcome, {{user.username}}</a></li>
         <li><a href="/user/logout">Logout</a></li>
      <!--    <li><a href="/user/register/">Register</a></li> -->
       </ul>
