--- a/my_virtual_thoughts/entries/templates/student_dashboard.html
+++ b/my_virtual_thoughts/entries/templates/student_dashboard.html
@@ -7,6 +7,8 @@
 <h3 style="font-family:Courier New, Courier, monospace;color: #05c1f3 ";>Batch COE-{{user.profile.batch}}
  	<div class="list-group">
   <a href="http://127.0.0.1:8000/user/stu_dashboard/assignments" class="list-group-item list-group-item-action"><h3 style= "font-family: Courier New, Courier, monospace;color: #05c1f3";>Your Assignments</h3></a>
+  <a href="http://127.0.0.1:8000/user/stu_dashboard/timetable" class="list-group-item list-group-item-action"><h3 style= "font-family: Courier New, Courier, monospace;color: #05c1f3";>Your TimeTable</h3></a>
+
 </div>
   
 </center>
