--- a/my_virtual_thoughts/entries/templates/index.html
+++ b/my_virtual_thoughts/entries/templates/index.html
@@ -1,44 +1,6 @@
-{% extends "base.html" %}
-{% block content %} 
-  {% for t in assignment_entries %}
-    <div class="row">
-    <div class="col s12 m6">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">{{t.Assignment_Name}}</span>
-          <p>{{t.Assignment_Content}}</p>
-        </div>
-          <p>
-          <break>
-          </break>
-      </p>
-          <p>Published By:- {{t.user}}</p>
-         <p> {{t.Date_Published}}</p>
-        </div>
-      </div>
-    </div>
-  </div>
-    {% endfor %}
-  <!-- {% if is_paginated %}
-    <ul class="pagination">  
-    {% if page_object.has_previous %}
-      <li class="page-item">
-        <a class="page-item" href="?page={{page_obj.previous_page_number}}">&larr; Previous Page</a>
-      </li>
-    {% elif page_obj.has_next %}
-    <li class="page-item">
-      <a class="page-item" href="?page={{page_obj.next_page_number}}">&rarr; Next Page</a>
-    </li>
-    {% elif page_obj.has_next and page_obj.has_previous %}
-    <li class="page-item">
-        <a class="page-item" href="?page={{page_obj.previous_page_number}}">&larr; Previous Page</a>
-      </li>
-      <li class="page-item">
-      <a class="page-item" href="?page={{page_obj.next_page_number}}">&rarr; Next Page</a>
-    </li>
-  {% endif %} -->
-{% endif %}
-
-
-         
-  {% endblock %}
+{% extends 'base.html' %}
+{% block content %}
+{% load static %}
+{% load staticfiles %}
+Hell
+{% endblock %}
